get product trong category , lọc , search trong category
