# app/Models/Category.php
@@ -24,5 +24,10 @@ class Category extends Model
     {
         return $this->belongsTo(Category::class, 'parent_category_id');
     }
+    public function children()
+    {
+        return $this->hasMany(Category::class, 'parent_category_id')->with('children');
+    }
+
 }
 
