# routes/api.php
@@ -2,6 +2,7 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\Front\CategoryController;
 
 /*
 |--------------------------------------------------------------------------
@@ -13,6 +14,10 @@ use Illuminate\Support\Facades\Route;
 | be assigned to the "api" middleware group. Make something great!
 |
 */
+
+Route::get('/getCategories', [CategoryController::class, 'getCategory']);
+Route::get('/get-parent-categories-with-count', [CategoryController::class, 'getParentCategoriesWithProductCount']);
+Route::get('/products-by-category/{slug}', [CategoryController::class, 'getProductsByCategorySlug']);
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
